Changed scroll snapping preventing js tap navigaionton mobile.

--- a/styles.css
+++ b/styles.css
@@ -18,9 +18,10 @@ body {
   flex-direction: column;
   scroll-snap-type: y mandatory;
   -webkit-overflow-scrolling: touch;
-  scroll-snap-stop: always;
+  /* scroll-snap-stop: always; */
   scroll-snap-points-x: initial;
   scroll-snap-points-y: repeat(100%);
+  scroll-snap-align: start;
 }
 
 .section-image {
@@ -31,7 +32,7 @@ body {
   background-size: cover;
   overflow: hidden;
   scroll-snap-align: start;
-  scroll-snap-stop: always;
+  /* scroll-snap-stop: always; */
 }
 
 .sentence {
